2008-01-11  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/dialogs.c: Fix broken Rename functionality (closes #1868621).
 * src/printing.c:
   Fix crash while reading Scintilla styles.
   Add GTK's progress dialog when printing large documents which also
   provides the ability to cancel a print operation.


2008-01-10  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c:
   Hopefully fix bug with Cut/Copy/Paste KB not working (#1867861).
 * src/prefs.c, src/keyfile.c, src/vte.c, doc/geany.txt, doc/geany.html:
   Add 'Override Geany keybindings' VTE prefs dialog option (replaces
   hidden pref), and make it off by default.


2008-01-09  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/project.c:
   Edit base path entry tooltip for clarity.
   Use stock close button in close project prompt.
   Allow the base path to be empty, so that users can use the current
   file's directory for the Make command (but still use project session
   support). In future, perhaps it would be good to have a separate Make
   path setting for projects.


2008-01-09  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * geany.glade, src/geanywraplabel.c, src/geanywraplabel.h,
   src/interface.c, src/plugins.c, src/prefs.c, src/vte.c,
   src/Makefile.am, src/makefile.win32:
   Add GeanyWrapLabel (subclass of GtkLabel) to wrap text at any width.
   Use GeanyWrapLabel in preferences dialog and plugin manager dialog
   to save a lot of space and improve layout of descriptive texts.
 * src/msgwindow.c:
   Add workaround for display problem in Message window:
   Truncate displayed string at 1024 bytes if it is longer.
 * src/utils.c, src/win32.v:
   Fix compile error on Windows.
   Don't use _waccess_s since it seems to be unavailable in MingW32.


2008-01-06  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * geany.nsi, geany_private.rc, README, doc/geany.html, doc/geany.txt,